bad/incr_literal_neg_int.example_compiler_output
ERROR
[1mbad/incr_literal_neg_int.lat:4:7: [1;31merror: [0;1mexpression is not assignable[m
	(-42)++;
	     [1;32m^[m
[1mbad/incr_literal_neg_int.lat:4:2: [1;34mnote: [0;1mexpression starts here[m
	(-42)++;
	[1;32m^[m
